--- a/layouts/partials/head/twitter_cards.html
+++ b/layouts/partials/head/twitter_cards.html
@@ -1,7 +1,7 @@
-<meta name="twitter:card" content="app">
+<meta name="twitter:card" content="summary_large_image">
 <meta name="twitter:site" content="@SingularMove">
 <meta name="twitter:creator" content="Dave Pratt, DPT, OCS, CSCS">
 <meta name="twitter:title" content="Singular Movement">
-<meta name="twitter:description" content="Strength & Conditioning Apps and Educational Content">
+<meta name="twitter:description" content="Strength and Conditioning App">
 <meta name="twitter:image" content="doks.png">
-
+<meta name="twitter:url" content="https://movementapplication.com/">
