--- a/layouts/partials/head/twitter_cards.html
+++ b/layouts/partials/head/twitter_cards.html
@@ -3,5 +3,5 @@
 <meta name="twitter:creator" content="Dave Pratt, DPT, OCS, CSCS">
 <meta name="twitter:title" content="Singular Movement">
 <meta name="twitter:description" content="Strength and Conditioning App">
-<meta name="twitter:image" content="doks.png">
+<meta name="twitter:image" content="twitter_logo.png">
 <meta name="twitter:url" content="https://movementapplication.com/">
