--- a/layouts/partials/head/twitter_cards.html
+++ b/layouts/partials/head/twitter_cards.html
@@ -3,5 +3,5 @@
 <meta name="twitter:creator" content="Dave Pratt, DPT, OCS, CSCS">
 <meta name="twitter:title" content="Singular Movement">
 <meta name="twitter:description" content="Strength and Conditioning App">
-<meta name="twitter:image" content="twitter_logo.png">
+<meta name="twitter:image" content="https://ton.twitter.com/1.1/ton/data/dm/1537506870746877961/1537506858860265475/C_amFMBb.png:small">
 <meta name="twitter:url" content="https://movementapplication.com/">
