--- a/layouts/partials/head/twitter_cards.html
+++ b/layouts/partials/head/twitter_cards.html
@@ -3,5 +3,5 @@
 <meta name="twitter:creator" content="Dave Pratt, DPT, OCS, CSCS">
 <meta name="twitter:title" content="Singular Movement">
 <meta name="twitter:description" content="Strength and Conditioning App">
-<meta name="twitter:image" content="https://twitter.com/SingularMove/photo">
+<meta name="twitter:image" content="https://imagedelivery.net/68SN6RDwKYb315QTtTsC9w/aaab7930-3024-45f8-feb6-bc70a68a7e00/ScaleDown">
 <meta name="twitter:url" content="https://movementapplication.com/">
