--- a/layouts/partials/head/twitter_cards.html
+++ b/layouts/partials/head/twitter_cards.html
@@ -3,5 +3,6 @@
 <meta name="twitter:creator" content="Dave Pratt, DPT, OCS, CSCS">
 <meta name="twitter:title" content="Singular Movement">
 <meta name="twitter:description" content="Strength and Conditioning App">
-<meta name="twitter:image" content="https://imagedelivery.net/68SN6RDwKYb315QTtTsC9w/2bc71ff3-6cc5-44dc-1954-31a921342f00/public">
+<meta name="twitter:image" content="https://imagedelivery.net/68SN6RDwKYb315QTtTsC9w/9bf32d0c-2445-4bae-34ba-7c8221c17700/ScaleDown">
+<meta name="twitter:image:alt" content="Singular Movement">
 <meta name="twitter:url" content="https://movementapplication.com/">
