--- a/layouts/partials/head/twitter_cards.html
+++ b/layouts/partials/head/twitter_cards.html
@@ -1,8 +1,7 @@
 <meta name="twitter:card" content="summary_large_image">
 <meta name="twitter:site" content="@SingularMove">
-<meta name="twitter:creator" content="Dave Pratt, DPT, OCS, CSCS">
+<meta name="twitter:creator" content="@DavePrattDPT">
 <meta name="twitter:title" content="Singular Movement">
-<meta name="twitter:description" content="Strength and Conditioning App">
+<meta name="twitter:description" content="Fuck you">
 <meta name="twitter:image" content="https://singular-mobility-app-landing-3.pages.dev/doks.png">
 <meta name="twitter:image:alt" content="Singular Movement">
-<meta name="twitter:url" content="https://movementapplication.com/">
