--- a/layouts/partials/head/twitter_cards.html
+++ b/layouts/partials/head/twitter_cards.html
@@ -2,6 +2,6 @@
 <meta name="twitter:site" content="@SingularMove">
 <meta name="twitter:creator" content="@DavePrattDPT">
 <meta name="twitter:title" content="Singular Movement">
-<meta name="twitter:description" content="Fuck you">
-<meta name="twitter:image" content="https://singular-mobility-app-landing-3.pages.dev/doks.png">
+<meta name="twitter:description" content="Mobility Training Application">
+<meta name="twitter:image" content="https://singular-mobility-app-landing-3.pages.dev/twitter.png">
 <meta name="twitter:image:alt" content="Singular Movement">
