--- a/layouts/partials/head/twitter_cards.html
+++ b/layouts/partials/head/twitter_cards.html
@@ -3,5 +3,5 @@
 <meta name="twitter:creator" content="@DavePrattDPT">
 <meta name="twitter:title" content="Singular Movement">
 <meta name="twitter:description" content="Mobility Training Application">
-<meta name="twitter:image" content="https://singular-mobility-app-landing-3.pages.dev/about_page_logo.png">
+<meta name="twitter:image" content="https://singular-mobility-app-landing-3.pages.dev/mobility_app_1.png">
 <meta name="twitter:image:alt" content="Singular Movement">
