--- a/layouts/index.html
+++ b/layouts/index.html
@@ -8,7 +8,7 @@
       <h2 class="mt-0">Singular Movement's Mobility Training App</h2>
     </div>
     <div class="col-lg-9 col-xl-8 text-center">
-      <p class="lead">Helps users conveniently, safely, and inexpensively improve their mobility from head to toe.</p>
+      <p class="lead">Mobility is the foundation of athleticism. Our app helps users conveniently, safely, and inexpensively improve their mobility from head to toe.</p>
       <br>
       <a class="btn_get_started" href="https://singularmovement.com/"
          style="border: 2px solid black; border-radius: 5px; background-color: #3285b8; color: white; padding: 14px 28px; font-size: 16px; cursor: pointer"
