--- a/layouts/index.html
+++ b/layouts/index.html
@@ -2,7 +2,7 @@
 <section class="section container-fluid mt-n3 pb-3">
   <div class="row justify-content-center">
     <div class="col-lg-12 text-center">
-      <img src="android-chrome-192x192.png">
+      <img src="https://imagedelivery.net/68SN6RDwKYb315QTtTsC9w/aaab7930-3024-45f8-feb6-bc70a68a7e00/ScaleDown">
       <br>
       <br>
       <h2 class="mt-0">Singular Movement's Mobility Training App</h2>
